# loremipsum

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  flake.nix  sqlx-data.json
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs  ping.rs
crates/common/: Cargo.toml
crates/common/src/: logging.rs
crates/common/src/api/: error.rs  mod.rs
crates/common/src/api/queue/: get_work.rs  mod.rs  submit_work.rs
crates/server/: Cargo.toml
crates/server/migrations/: 20221029204613_init.sql
crates/server/src/: config.rs  db.rs  main.rs  state.rs
crates/server/src/api/: auth.rs  mod.rs
crates/server/src/api/admin/: gen_key.rs  mod.rs  run_schedule.rs
crates/server/src/api/queue/: get_work.rs  mod.rs  submit_work.rs
