[package]
name = "server"
authors = ["NotNite <hi@notnite.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
common = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

axum = { git = "https://github.com/tokio-rs/axum", features = ["http2", "headers"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "json"] }
uuid = { version = "1.2.1", features = ["v4"] }
